--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,25 @@
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme">
 
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".AppInstall"
+            android:exported="true"></receiver>
+
+        <service
+            android:name=".HandleInstallService"
+            android:exported="false"></service>
     </application>
+
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
 </manifest>
