--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
