--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,15 @@ buildscript {
 }
 
 allprojects {
+    buildscript {
+        repositories {
+            jcenter()
+            mavenCentral()
+        }
+    }
+
     repositories {
         jcenter()
+        mavenCentral()
     }
 }
