--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".app.activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,11 +18,11 @@
         </activity>
 
         <receiver
-            android:name=".AppInstall"
+            android:name=".service.broadcastReciever.AppInstall"
             android:exported="true"></receiver>
 
         <service
-            android:name=".HandleInstallService"
+            android:name=".service.HandleInstallService"
             android:exported="false"></service>
     </application>
 
