--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ androidUnitTest {
 dependencies {
     compile 'com.jakewharton:butterknife:6.0.0'
 
+    compile 'com.squareup.dagger:dagger:1.2.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+
+
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.4'
 }
