--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 apply plugin: 'hugo'
 
+def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
+def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
+
 android {
     signingConfigs {
         googlePlay {
@@ -34,6 +37,9 @@ android {
 
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+
+        buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
+        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""
     }
     buildTypes {
         release {
@@ -66,6 +72,7 @@ androidUnitTest {
     //Download the javadoc.jar for the test dependencies. `false` by default.
 }
 
+
 dependencies {
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.squareup.dagger:dagger:1.2.1'
@@ -73,6 +80,5 @@ dependencies {
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.4'
     debugCompile 'com.android.support:support-v4:21.0.2'
-    debugCompile 'com.jakewharton.madge:madge:1.1.1'
     debugCompile 'com.jakewharton.scalpel:scalpel:1.1.1'
 }
