--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ buildscript {
 def versionMajor = 0
 def versionMinor = 1
 def versionPatch = 0
-def versionBuild = 0
 
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
@@ -32,7 +31,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 21
 
-        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+        versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
 
         buildConfigField "String", "GIT_SHA", "\"${gitSha}\""
