--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:name=".DebugAndDeleteApp">
 
         <activity
-            android:name=".app.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +35,7 @@
         </activity>
 
         <receiver
-            android:name=".service.broadcastReciever.AppInstall"
+            android:name=".broadcastReciever.AppInstall"
             android:exported="true" />
 
         <service
