--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+
+
 buildscript {
     dependencies {
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
@@ -43,7 +45,7 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
     defaultConfig {
-        applicationId "de.poeschl.apps.debuganddelete"
+        applicationId "de.poeschl.apps.tryandremove"
         minSdkVersion 15
         targetSdkVersion 21
 
@@ -87,7 +89,7 @@ def keyStorePath = System.getenv('Android_Keystore_Path')
 
 //Adds dynamic signing stuff during init process
 afterEvaluate { project ->
-    def propsFile = file(keyStorePath + '/DebugAndDelete.keyproperties')
+    def propsFile = file(keyStorePath + '/TryAndRemove.keyproperties')
     def configName = 'googlePlay'
 
     if (propsFile.exists() && android.signingConfigs.hasProperty(configName)) {
