--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,17 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.poeschl.apps.debuganddelete">
+    package="de.poeschl.apps.tryandremove">
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/app_icon"
         android:theme="@style/AppTheme"
-        android:name=".DebugAndDeleteApp">
+        android:name=".TryAndRemoveApp">
 
         <activity
-            android:name=".activities.MainActivity"
+            android:name="de.poeschl.apps.tryandremove.activities.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,11 +35,11 @@
         </activity>
 
         <receiver
-            android:name=".broadcastReciever.AppDetectionReceiver"
+            android:name="de.poeschl.apps.tryandremove.broadcastReciever.AppDetectionReceiver"
             android:exported="true" />
 
         <service
-            android:name=".service.ApplicationDetectionService"
+            android:name="de.poeschl.apps.tryandremove.service.ApplicationDetectionService"
             android:exported="false" />
     </application>
 </manifest>
