--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@
  * limitations under the License.
  */
 
+
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
@@ -33,11 +35,13 @@ allprojects {
         repositories {
             jcenter()
             mavenCentral()
+            maven { url 'https://maven.fabric.io/public' }
         }
     }
 
     repositories {
         jcenter()
         mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
