--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:name=".TryAndRemoveApp">
 
         <activity
-            android:name="de.poeschl.apps.tryandremove.activities.MainActivity"
+            android:name=".activities.AppListActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,11 +35,11 @@
         </activity>
 
         <receiver
-            android:name="de.poeschl.apps.tryandremove.broadcastReciever.AppDetectionReceiver"
+            android:name=".broadcastReciever.AppDetectionReceiver"
             android:exported="true" />
 
         <service
-            android:name="de.poeschl.apps.tryandremove.service.ApplicationDetectionService"
+            android:name=".service.ApplicationDetectionService"
             android:exported="false" />
     </application>
 </manifest>
