--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:icon="@drawable/app_icon"
+        android:icon="@drawable/ic_launcher_app"
         android:theme="@style/AppTheme"
         android:name=".TryAndRemoveApp">
 
