--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /.idea/libraries
 .DS_Store
 /build
+app/build
+app/app.iml
+app/crashlytics.properties
+app/src/main/res/values/com_crashlytics_export_strings.xml
