--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -17,5 +17,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.poeschl.apps.tryandremove">
 
+    <application>
+        <uses-library
+            android:name="android.test.runner"
+            android:required="false" />
+    </application>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 </manifest>
