--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2014 Markus Poeschl
+ * Copyright (c) 2014 Markus Poeschl
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,6 @@
 
 
 buildscript {
-    repositories {
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
     dependencies {
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.12.0'
@@ -35,11 +31,6 @@ def versionPatch = 0
 
 apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
-
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 apply plugin: 'io.fabric'
 apply plugin: 'hugo'
 
