--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2014 Markus Poeschl
+  ~ Copyright (c) 2015 Markus Poeschl
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="de.poeschl.apps.tryandremove">
 
     <application
@@ -22,7 +23,9 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher_app"
         android:theme="@style/AppTheme"
-        android:name=".TryAndRemoveApp">
+        android:name=".TryAndRemoveApp"
+        android:supportsRtl="true"
+        tools:ignore="UnusedAttribute">
 
         <activity
             android:name=".activities.MainActivity"
