proof of concept for up navigation, a new super activity class needs to be created for children activities.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
 
         <activity
             android:name=".activities.PrivacyPolicyActivity"
-            android:label="@string/private_policy_title"/>
+            android:label="@string/private_policy_title"
+            android:parentActivityName=".activities.AppListActivity"/>
 
         <receiver
             android:name=".broadcastReciever.AppDetectionReceiver"
