--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher_app"
-        android:theme="@style/AppTheme"
+        android:theme="@style/TryAndRemoveTheme"
         android:name=".TryAndRemoveApp"
         android:supportsRtl="true"
         tools:ignore="UnusedAttribute">
