Replaced artifact with local version

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ app/build
 app/app.iml
 app/crashlytics.properties
 app/src/main/res/values/com_crashlytics_export_strings.xml
+android-floating-action-button/android-floating-action-button.iml
