Added some rules for butterknife and crashlytics for proguard. Not using so far because dagger issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,8 +75,9 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false //Don't forget to set crashlytics up for proguard
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt')
             signingConfig signingConfigs.googlePlay
 
 
