--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@
 
 
 
+
+
 buildscript {
     dependencies {
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
@@ -222,18 +224,16 @@ dependencies {
     }
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:appcompat-v7:22.0.0'
-//    Is replaced with local aar until changes gets merged
-//    compile 'com.getbase:floatingactionbutton:1.4.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    //    Is replaced with local aar until changes gets merged
+    //    compile 'com.getbase:floatingactionbutton:1.4.0'
     compile project(':android-floating-action-button')
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
-
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.4'
-
     androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-
     debugCompile 'com.android.support:support-v4:22.0.0'
     debugCompile 'com.jakewharton.scalpel:scalpel:1.1.2'
 }
