Added slide actions and set default coloring to false

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@
 
 
 
+
+
 buildscript {
     dependencies {
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
@@ -228,6 +230,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:palette-v7:22.0.0'
     compile 'com.makeramen:roundedimageview:2.0.0'
+    compile "com.daimajia.swipelayout:library:1.1.8@aar"
     //    Is replaced with local aar until changes gets merged
     //    compile 'com.getbase:floatingactionbutton:1.4.0'
     compile project(':android-floating-action-button')
