--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@
 
 
 
+
+
 buildscript {
     dependencies {
         classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
@@ -223,7 +225,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.jakewharton.timber:timber:2.7.1'
     compile 'com.squareup.dagger:dagger:1.2.2'
-    compile('com.crashlytics.sdk.android:crashlytics:2.2.2@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.2.1@aar') {
         transitive = true;
     }
     compile 'com.android.support:recyclerview-v7:21.0.3'
@@ -235,6 +237,9 @@ dependencies {
     //    compile 'com.getbase:floatingactionbutton:1.4.0'
     compile project(':android-floating-action-button')
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
+    compile('com.mopub.sdk.android:mopub:3.4.0@aar') {
+        transitive = true;
+    }
 
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.4'
