--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         android:theme="@style/TryAndRemoveTheme"
         tools:ignore="UnusedAttribute">
 
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="5a3d09763a712b539db92fd4cfa28b0b183fcc06" />/>
+
         <receiver
             android:name=".broadcastReciever.AppDetectionReceiver"
             android:exported="true" />
