--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ android:
     - tools
 
     # The BuildTools version used by your project
-    - build-tools-22
+    - build-tools-23.0.2
 
     # The SDK version used to compile your project
-    - android-21
+    - android-23
     - android-22
 
     # Additional components
@@ -34,15 +34,16 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-	- addon-google_apis-google-23
-    - sys-img-armeabi-v7a-android-23
+    - addon-google_apis-google-23
+    # x86 is not functioning on travis for some reason
+    #- sys-img-x86-addon-google_apis-google-23
     - sys-img-armeabi-v7a-google_apis-23
 
   licenses:
       - 'android-sdk-license-.+'
 
 before_install:
-  - echo no | android create avd --force --name test --target "Google Inc.:Google APIs:23" --abi "google_apis/armeabi-v7a"
+  - echo no | android create avd --force -n test -t "android-23" --abi google_apis/armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - adb wait-for-device
   - android-wait-for-emulator
